Corrected margin gap between components

--- a/src/app/features/layout/header/header.component.scss
+++ b/src/app/features/layout/header/header.component.scss
@@ -2,4 +2,8 @@
 .header-container {
   background-color: #000000;
   color: white;
+
+  h2 {
+    margin: auto;
+  }
 }
