--- a/src/app/features/pages/home/home.component.scss
+++ b/src/app/features/pages/home/home.component.scss
@@ -3,4 +3,8 @@
   background-color: #ff5722;
   color: white;
   margin: auto;
+
+  p {
+    margin: auto;
+  }
 }
